python/testData/quickFixes/PyTypeHintsQuickFixTest/callableTwoElements.py
from typing import Callable

e: Callable[<error descr="'Callable' must be used as 'Callable[[arg, ...], result]'">i<caret>nt</error>, str]